After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737559 - plugins-bad: remove unnecessary GLIB_DISABLE_DEPRECATION_WARNINGS
plugins-bad: remove unnecessary GLIB_DISABLE_DEPRECATION_WARNINGS
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other Linux
: Normal minor
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-29 04:45 UTC by Vineeth
Modified: 2014-10-02 08:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
remove unnecessary definitions (4.45 KB, patch)
2014-09-29 04:47 UTC, Vineeth
committed Details | Review

Description Vineeth 2014-09-29 04:45:54 UTC
There are unnecessary definitions for disabling deprecation warnings.
Since GLIB_DISABLE_DEPRECATION_WARNINGS is not needed anymore in these files, removing the same.
Comment 1 Vineeth 2014-09-29 04:47:51 UTC
Created attachment 287317 [details] [review]
remove unnecessary definitions
Comment 2 Sebastian Dröge (slomo) 2014-10-02 08:03:07 UTC
commit 14acb6fb3796c9c29dc03ae98a61c7857255cfad
Author: Vineeth T M <vineeth.tm@samsung.com>
Date:   Mon Sep 29 10:15:39 2014 +0530

    gst: remove unnecessary GLIB_DISABLE_DEPRECATION_WARNINGS
    
    There are unnecessary definitions for disabling deprecation warnings.
    Since GLIB_DISABLE_DEPRECATION_WARNINGS is not needed anymore in these files,
    removing the same.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=737559