gst/coloreffects/gstchromahold.c
@@ -35,14 +35,9 @@
  * ]| This pipeline only keeps the red color.
  */
 
-
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif
-
-/* FIXME 0.11: suppress warnings for deprecated API such as GStaticRecMutex
- * with newer GLib versions (>= 2.31.0) */
-#define GLIB_DISABLE_DEPRECATION_WARNINGS
 
 #include "gstchromahold.h"
 
